# Events-Face

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
src/: __init__.py  urls.py
src/authentication/: admin.py  api_docs.py  dto.py  exceptions.py  ioc_container.py  manager.py  models.py  repository.py  serializers.py  services.py  urls.py  use_cases.py  views.py
src/authentication/migrations/: 0001_initial.py
src/common/: exceptions.py  response_factory.py  serializer.py
src/core/: env.py  settings.py
src/events/: admin.py  api_docs.py  dto.py  entity_types.py  exceptions.py  ioc_container.py  models.py  repository.py  serializers.py  services.py  urls.py  use_cases.py  views.py
src/events/migrations/: 0001_initial.py
src/notifications/: admin.py  dto.py  models.py  repository.py  services.py  utils.py
src/notifications/migrations/: 0001_initial.py
src/sync/: admin.py  models.py
src/sync/management/commands/: run_sync_events.py
src/sync/migrations/: 0001_initial.py
src/tasks/: celery.py  tasks.py
src/tasks/management/commands/: process_notifications_outbox.py
