[project]
name = "events-face"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.8",
    "django-celery-beat>=2.8.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "kafka-python>=2.3.0",
    "psycopg2-binary>=2.9.11",
    "punq>=0.7.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
